2008-05-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-url-readable-string): Don't decode url if it looks not to
	have been encoded.

2008-05-25  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-relationship-estimate-rules): Fix regexp for Google
	search within EmacsWiki.

2008-05-20  Naohiro Aota  <nao.aota@gmail.com>

	* README: Add information about how to create `configure' script.

	* README.ja: Ditto.

	* w3m.el (w3m-goto-url): Delayed encoding of fragment part.

2008-05-18  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-cookie.el (w3m-cookie-save-current-site-cookies): New function.
	(w3m-cookie-save): Add optional argument "domain".

2008-05-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-add-text-properties): New inline macro.
	(mew-w3m-view-inline-image): Use `mew-w3m-add-text-properties'.
	(mew-mime-text/html-w3m): Ditto.

2008-05-09  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-cookie.el (w3m-cookie-save): Make it interactive function.
	(w3m-cookie-save-cookies): New variable.
	(w3m-cookie-shutdown): Use it.

	* w3m.el (toplevel): Shutdown cookie system when exiting emacs.

2008-05-08  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-cookie.el (w3m-cookie-shutdown): Fixed docstring.

2008-05-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-filter.el (w3m-filter-amazon): Fix string to search the body.

2008-04-30  Naohiro Aota  <nao.aota@gmail.com>

	* doc/emacs-w3m-ja.texi: Update translation.

	* w3m.el (w3m-goto-url): Use w3m-current-coding-system first to encode
	url if available; Also encode name part when url is local.
	(w3m-ignored-image-url-regexp): New variable.
	(w3m-toggle-inline-images-internal): Don't display image whose url
	match `w3m-ignored-image-url-regexp'.
	(w3m-decode-entities, w3m-decode-entities-string): Replace
	"(match-beginning 2)" with "(match-end 1)" to deal with emacs-21's
	strange behavior.

2008-04-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-filter.el (w3m-filter-rules): Support Mixi with SSL.
